# machinekit

./: .gitignore  .travis.yml  Dockerfile
.travis/: build_deb.sh  docker_run.sh  send_binaries.sh
debian/: changelog  configure  control.bottom.in  control.in  control.top.in  (+6 more)
projects/: .gitignore  CMakeLists.txt  config.h.in
projects/cmake/: UseHALComp.cmake
projects/emc/: CMakeLists.txt
projects/emc/ini/: CMakeLists.txt
projects/emc/kinematics/: CMakeLists.txt
projects/emc/motion/: CMakeLists.txt
projects/emc/motion/include/: mot_priv.h
projects/emc/nml_intf/: CMakeLists.txt
projects/emc/pythonplugin/: CMakeLists.txt
projects/emc/task/: .gitignore  CMakeLists.txt
projects/emc/tp/: CMakeLists.txt
projects/emc/tp/src/: blendmath.c
projects/hal/: CMakeLists.txt
projects/hal/components/: .gitignore  CMakeLists.txt
projects/hal/cython/machinekit/: CMakeLists.txt  shmcommon.pxd
projects/hal/drivers/: .gitignore  CMakeLists.txt
projects/hal/linuxcnchal/: CMakeLists.txt
projects/hal/linuxcnchal/include/: config_module.h
projects/hal/utils/: CMakeLists.txt  halcmd_rtapiapp.cc
projects/inifile/: .gitignore  CMakeLists.txt
projects/libnml/: CMakeLists.txt
projects/linklist/: CMakeLists.txt
projects/machinetalk/: CMakeLists.txt
projects/machinetalk/haltalk/: haltalk.hh
projects/machinetalk/messagebus/: messagebus.cc
projects/machinetalk/msgcomponents/: .gitignore  CMakeLists.txt  pbmsgs.h
projects/machinetalk/mtalk/: CMakeLists.txt
projects/machinetalk/mtalk/include/: container.h  halpb.hh  pbutil.hh
projects/machinetalk/mtalk_proto/: CMakeLists.txt
projects/machinetalk/support/: encdec.cc  linmove.cc  npbdecode.c  position.cc  rtprintf.c  sizes.c
projects/machinetalk/webtalk/: webtalk.hh  webtalk_jsonpolicy.cc
projects/posemath/: CMakeLists.txt
projects/rs274ngc/: CMakeLists.txt
projects/rtapi/: CMakeLists.txt
projects/rtapi/rtapi/: .gitignore  CMakeLists.txt
projects/rtapi/rtapi/include/: rtapi_common.h
projects/rtapi/rtapi/src/: rt-preempt.c  rtapi_app.cc  rtapi_msgd.cc
projects/rtapi/shmdrv/: CMakeLists.txt
projects/rtapi/shmdrv/src/: shmdrv.c  shmdrvapi.c
projects/rtapi/userpci/: CMakeLists.txt
projects/rtapi_math/: CMakeLists.txt
src/: .gitignore  CMakeLists.txt  Makefile  Makefile.inc.in  Makefile.modinc.in  config.h  configure.ac  configure.in  foo.ini
src/cMake/: FindReadline.cmake  FindXenomai.cmake
src/emc/ini/: inihal.cc
src/emc/kinematics/: Submakefile  kinematics.h  trivkins.c
src/emc/motion/: Submakefile  command.c  control.c  homing.c  homing.dot  mot_priv.h  motion.c  motion.h  usrmotintf.cc
src/emc/motion-logger/: motion-logger.c
src/emc/nml_intf/: emc_nml.hh  emcops.cc
src/emc/pythonplugin/: python_plugin.cc
src/emc/rs274ngc/: Submakefile  interp_array.cc  interp_base.hh  interp_check.cc  interp_convert.cc  interp_cycles.cc  interp_internal.hh  interp_namedparams.cc  interp_o_word.cc  interp_read.cc  interp_remap.cc  interp_setup.cc  interp_write.cc  previewmodule.cc  rs274ngc.hh  rs274ngc_interp.hh  rs274ngc_pre.cc
src/emc/sai/: Submakefile
src/emc/task/: Submakefile  emccanon.cc  emctask.cc  emctaskmain.cc  taskintf.cc  taskmodule.cc
src/emc/tp/: tc_types.h  tp.c  tp_types.h
src/emc/usr_intf/: Submakefile  halui.cc
src/emc/usr_intf/axis/extensions/: emcmodule.cc
src/emc/usr_intf/axis/scripts/: axis.py
src/emc/usr_intf/emcweb/: mongoose.c
src/hal/: CMakeLists.txt  Submakefile  hal.h  hal_lib.c  hal_priv.h  halmodule.cc
src/hal/classicladder/: CMakeLists.txt
src/hal/components/: CMakeLists.txt  limit3.comp  sim_home_switch.comp
src/hal/cython/: README.dev  Submakefile
src/hal/cython/machinekit/: compat_bindings.pyx  hal.pyx  hal_group.pxd  hal_group.pyx  hal_pin.pyx  hal_ring.pyx  hal_signal.pyx  hal_util.pxd  ring.pxd  rtapi.c  rtapi.pyx  rtapi_bindings.pxd  rtapi_bindings.pyx  shmcommon.pxd  shmcommon.pyx
src/hal/drivers/: Submakefile  hal_gpio.c  mesa_p260c.c
src/hal/drivers/hal_pru_generic/: Submakefile  encoder.c
src/hal/drivers/mesa-hostmot2/: bspi.c  hm2_test.c  hostmot2.c  hostmot2.h  pins.c  pktuart.c  sserial.c  tram.c  uart.c  watchdog.c
src/hal/i_components/: limit3.icomp
src/hal/lib/: hal_group.c  hal_lib.c  hal_ring.c
src/hal/user_comps/: CMakeLists.txt  Submakefile
src/hal/utils/: CMakeLists.txt  Submakefile  halcmd_commands.c  halcmd_main.c  halcmd_rtapiapp.cc  halrmt.c
src/libnml/: CMakeLists.txt
src/libnml/buffer/: tcpmem.cc  tcpmem.hh
src/libnml/cms/: cms_srv.hh  tcp_srv.cc  tcp_srv.hh
src/libnml/inifile/: CMakeLists.txt  inifile.cc
src/libnml/os_intf/: _shm.c
src/libnml/posemath/: CMakeLists.txt
src/machinetalk/: Submakefile
src/machinetalk/haltalk/: haltalk_main.cc
src/machinetalk/lib/: mk_backtrace.c  syslog_async.c
src/machinetalk/proto/proto/: message.proto  rtapi_masterd.proto
src/machinetalk/support/: unionread.c
src/machinetalk/webtalk/: webtalk_defaultpolicy.cc
src/module_helper/: module_helper.c
src/po/: Submakefile
src/rtapi/: .gitignore  CMakeLists.txt  README  Submakefile  cython_helpers.pxd  mk_config.pxd  mk_config.pyx  ring.h  ring.pxd  rt-preempt-user.c  rt-preempt-user.h  rtai-kernel.c  rtai-kernel.h  rtapi.h  rtapi.pxd  rtapi_app.cc  rtapi_common.c  rtapi_common.h  rtapi_common.pxd  rtapi_common.pyx  rtapi_compat.c  rtapi_compat.h  rtapi_exception.c  rtapi_exception.h  rtapi_global.h  rtapi_global.pxd  rtapi_global.pyx  rtapi_global_bindings.pyx  rtapi_heap.c  rtapi_heap.h  rtapi_heap.pxd  rtapi_heap_bindings.pyx  rtapi_heap_private.h  rtapi_int.pxd  rtapi_kdetect.c  rtapi_main.c  rtapi_masterd.py  rtapi_module.c  rtapi_msg.c  rtapi_msgd.cc  (+13 more)
src/rtapi/config/: .gitignore  parameter.c  parameter.h  parameter.options  parameter.proto  parameter.pxd  parameter_bindings.c  parameter_bindings.pyx
src/rtapi/examples/shmem/: shmemusr.c
src/rtapi/examples/timer/: timertask.c
src/rtapi/shmdrv/: .gitignore  Submakefile  mutexwatch.c  shmdrv.c  shmdrv.h  shmdrv_api.pxd  shmdrv_api.pyx  shmdrvapi.c
src/rtapi/userpci/: CMakeLists.txt  Submakefile
src/rtapi/xeno_math/: libm.c
(+216 files in other folders)
